# learn-tracing

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  test-observability.sh
.opencode/: opencode.json
configs/: grafana-datasources.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml
configs/dashboards/: app-dashboard.json  dashboards.yml
courses/01-cncf-standard/: Cargo.toml  README.md
courses/01-cncf-standard/lesson-01-setup/: Cargo.toml  README.md
courses/01-cncf-standard/lesson-01-setup/src/: main.rs
courses/01-cncf-standard/lesson-02-logs/: Cargo.toml  README.md
courses/01-cncf-standard/lesson-02-logs/src/: main.rs
courses/01-cncf-standard/lesson-03-metrics/: Cargo.toml  README.md
courses/01-cncf-standard/lesson-03-metrics/src/: main.rs
courses/01-cncf-standard/lesson-04-traces/: Cargo.toml  README.md  TROUBLESHOOTING.md
courses/01-cncf-standard/lesson-04-traces/src/: main.rs
courses/01-cncf-standard/lesson-05-dashboard/: Cargo.toml  README.md
courses/01-cncf-standard/lesson-05-dashboard/src/: main.rs
courses/02-rust-native/: Cargo.toml  README.md
courses/02-rust-native/lesson-01-tracing-subscriber/: Cargo.toml  README.md
courses/02-rust-native/lesson-01-tracing-subscriber/src/: main.rs
courses/02-rust-native/lesson-02-span/: Cargo.toml  README.md
courses/02-rust-native/lesson-02-span/src/: main.rs
courses/02-rust-native/lesson-03-metrics/: Cargo.toml  README.md
courses/02-rust-native/lesson-03-metrics/src/: main.rs
courses/02-rust-native/lesson-04-traces/: Cargo.toml  README.md
courses/02-rust-native/lesson-04-traces/src/: main.rs
courses/02-rust-native/lesson-05-integration/: Cargo.toml  README.md
courses/02-rust-native/lesson-05-integration/src/: main.rs
courses/03-otel-otlp/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-01-otel-init/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-01-otel-init/src/: main.rs
courses/03-otel-otlp/lesson-02-otel-logs/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-02-otel-logs/src/: main.rs
courses/03-otel-otlp/lesson-03-otel-metrics/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-03-otel-metrics/src/: main.rs
courses/03-otel-otlp/lesson-04-otel-traces/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-04-otel-traces/src/: main.rs
courses/03-otel-otlp/lesson-05-collector-pipeline/: Cargo.toml  README.md
courses/03-otel-otlp/lesson-05-collector-pipeline/src/: main.rs
docs/observability/: 01-overview.md  02-logging.md  03-metrics.md  04-tracing.md  05-relation.md
docs/superpowers/plans/: 2026-06-23-learn-tracing-plan.md  2026-06-26-add-loki-log-viewing.md
docs/superpowers/specs/: 2026-06-23-learn-tracing-design.md  2026-06-26-add-loki-log-viewing-design.md
docs/todo/: grpc-reflect.md  loki.md
lesson-05-dashboard/: Cargo.toml  TROUBLESHOOTING.md
