[package]
name = "lesson-03-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["logs", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["logs", "metrics", "grpc-tonic"] }
opentelemetry-appender-tracing = "0.29"
