[package]
name = "lesson-04-otel-traces"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "logs", "metrics"] }
